@@ -11,6 +11,7 @@ Version 1.89
 	Added option to show author date in revision graph instead of commit date
 	Added "No fast-forward" option to merge dialog
 	Added "Open With Difftool" to context menu in commit dialog
+	Added drag file support to unstaged items in commit dialog
 
 Version 1.88
 	Fixed a bug stopping the commit dialog from refreshing after a commit
